--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -14,9 +14,9 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+    #   - name: Install dependencies
+    #     run: |
+    #       pip install -r requirements.txt
 
       - name: Check Python version
         run: python --version
